--- a/index.html
+++ b/index.html
@@ -3,220 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information - お買い得ガジェット紹介</title>
+    <title>Value Information - セール情報</title>
     <style>
         body {
             background-color: #000000;
             color: #ffd700;
-            font-family: 'Times New Roman', "MS P明朝", "MS PMincho", "Hiragino Mincho ProN", serif;
+            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 20px;
             line-height: 1.6;
         }
         .container {
-            max-width: 900px;
+            max-width: 800px;
             margin: 0 auto;
-            padding: 40px 20px;
-        }
-        header {
-            text-align: center;
-            border-bottom: 2px solid #ffd700;
-            margin-bottom: 40px;
-            padding-bottom: 10px;
         }
         .site-name {
             font-size: 1.2rem;
-            letter-spacing: 3px;
+            font-weight: bold;
             text-transform: uppercase;
+            letter-spacing: 2px;
+            border-bottom: 1px solid #ffd700;
+            display: inline-block;
+            margin-bottom: 10px;
         }
         h1 {
-            font-size: 2rem;
+            font-size: 1.8rem;
             text-align: center;
             margin: 40px 0;
-            text-shadow: 2px 2px 4px rgba(255, 215, 0, 0.3);
-        }
-        h2 {
-            border-left: 5px solid #ffd700;
-            padding-left: 15px;
-            margin-top: 50px;
-            font-size: 1.6rem;
-        }
-        .intro-text, .summary-text {
-            font-size: 1.1rem;
-            margin-bottom: 40px;
-            text-align: justify;
-            background: rgba(255, 215, 0, 0.05);
             padding: 20px;
-            border: 1px solid rgba(255, 215, 0, 0.2);
+            border: 2px solid #ffd700;
             border-radius: 8px;
         }
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 30px;
-            margin-bottom: 50px;
-        }
-        .product-card {
+        .card {
+            background-color: #111111;
             border: 1px solid #ffd700;
-            padding: 20px;
-            background: linear-gradient(145deg, #0f0f0f, #000000);
-            border-radius: 10px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            border-radius: 12px;
+            padding: 25px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
         }
-        .product-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(255, 215, 0, 0.2);
+        h2 {
+            font-size: 1.4rem;
+            margin-top: 0;
+            border-left: 4px solid #ffd700;
+            padding-left: 15px;
         }
-        .product-title {
-            font-size: 1.2rem;
+        .benefit {
+            font-size: 1.1rem;
             font-weight: bold;
             margin-bottom: 15px;
-            height: 3.6em;
-            overflow: hidden;
+            color: #ffffff;
         }
-        .product-description {
-            font-size: 0.9rem;
-            color: #f0e68c;
-            margin-bottom: 20px;
+        .reason {
+            font-size: 0.95rem;
+            margin-bottom: 25px;
         }
-        .button-group {
+        .button-container {
             display: flex;
-            gap: 10px;
+            gap: 15px;
+            flex-wrap: wrap;
         }
         .btn {
             flex: 1;
+            min-width: 150px;
             text-align: center;
-            padding: 10px 0;
+            padding: 12px 20px;
             text-decoration: none;
             font-weight: bold;
-            font-size: 0.8rem;
             border-radius: 5px;
-            transition: opacity 0.3s;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
         }
         .btn-amazon {
             background-color: #ffd700;
-            color: #000;
+            color: #000000;
+            border: 1px solid #ffd700;
         }
         .btn-rakuten {
-            border: 1px solid #ffd700;
+            background-color: transparent;
             color: #ffd700;
+            border: 1px solid #ffd700;
         }
         .btn:hover {
             opacity: 0.8;
-            filter: brightness(1.2);
-        }
-        footer {
-            text-align: center;
-            margin-top: 80px;
-            padding-top: 20px;
-            border-top: 1px solid rgba(255, 215, 0, 0.3);
-            font-size: 0.8rem;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(255, 215, 0, 0.3);
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <header>
-        <div class="site-name">Value Information</div>
-    </header>
+    <div class="site-name">Value Information</div>
+    
+    <h1>【楽天市場・Amazon】2026年2月24日 0時の超お得なセール品！</h1>
 
-    <h1>【楽天市場・Amazon】2026年2月23日 23時のお買い得品をご紹介！</h1>
-
-    <section>
-        <h2>2026年2月23日 23時のお買い得商品6選</h2>
-        <p class="intro-text">
-            今、この瞬間、最高級の価値を手に入れるチャンスが到来しました！2026年2月23日23時、楽天市場とAmazonから厳選された、妥協なき性能を誇る至高のガジェット6選をお届けします。最新技術が凝縮された逸品たちが、驚愕のプライスであなたの手に。手にした瞬間に生活の質が変わる、そんな圧倒的な高揚感を約束するラインナップです。在庫は僅か、早い者勝ちの祭典。今すぐその目で、時代を凌駕する価値を確かめてください！
+    <!-- 商品1 -->
+    <div class="card">
+        <h2>【35%OFF】SONY ワイヤレスノイズキャンセリングヘッドホン WH-1000XM5</h2>
+        <p class="benefit">圧倒的な静寂が、あなたの作業空間をクリエイティブな聖域に変える。</p>
+        <p class="reason">
+            過去最安値圏のセールが本日解禁。高騰が続くオーディオ機器を旧価格以下で手に入れ、<br>
+            騒音ストレスから解放された最高効率の毎日を今すぐ手に入れてください。
         </p>
-    </section>
-
-    <div class="product-grid">
-        <!-- 商品1 -->
-        <div class="product-card">
-            <div>
-                <div class="product-title">次世代フラッグシップ スマートフォン Pro Max</div>
-                <p class="product-description">圧倒的な処理速度と芸術的なカメラ性能。未来をその手に収める至高の1台。</p>
-            </div>
-            <div class="button-group">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天で見る</a>
-            </div>
-        </div>
-
-        <!-- 商品2 -->
-        <div class="product-card">
-            <div>
-                <div class="product-title">究極のノイズキャンセリング ヘッドホン</div>
-                <p class="product-description">静寂の中で響く、純粋な音の輝き。日常を劇場に変える魔法のオーディオ。</p>
-            </div>
-            <div class="button-group">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天で見る</a>
-            </div>
-        </div>
-
-        <!-- 商品3 -->
-        <div class="product-card">
-            <div>
-                <div class="product-title">4K/240Hz 超高解像度 ゲーミングモニター</div>
-                <p class="product-description">現実を超える色彩と滑らかさ。勝利を確実にするための、プロ仕様の視覚体験。</p>
-            </div>
-            <div class="button-group">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天で見る</a>
-            </div>
-        </div>
-
-        <!-- 商品4 -->
-        <div class="product-card">
-            <div>
-                <div class="product-title">高級メカニカル キーボード Elite Edition</div>
-                <p class="product-description">指先から伝わる至福の打鍵感。美しさと機能性を兼ね備えたデスクの芸術品。</p>
-            </div>
-            <div class="button-group">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天で見る</a>
-            </div>
-        </div>
-
-        <!-- 商品5 -->
-        <div class="product-card">
-            <div>
-                <div class="product-title">スマートウォッチ Titanium Luxury</div>
-                <p class="product-description">健康管理もステータスもこれ一つで。チタンボディが放つ唯一無二の存在感。</p>
-            </div>
-            <div class="button-group">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天で見る</a>
-            </div>
-        </div>
-
-        <!-- 商品6 -->
-        <div class="product-card">
-            <div>
-                <div class="product-title">大容量ポータブル電源 プレミアムモデル</div>
-                <p class="product-description">非常時もアウトドアも、これさえあれば安心。圧倒的な電力を、優雅なデザインで。</p>
-            </div>
-            <div class="button-group">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天で見る</a>
-            </div>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
-    <section>
-        <h2>お得なアイテムをチェックしよう！</h2>
-        <p class="summary-text">
-            いかがでしたでしょうか。今回ご紹介した6つのアイテムは、どれも2026年の最前線を走る、まさに選ばれし者のためのガジェットです。価格以上の価値、そして所有することの悦びを、ぜひこの機会に味わってください。楽天市場とAmazonのセールは時間との戦いです。迷っている間に完売してしまうことも珍しくありません。あなたのライフスタイルを劇的に進化させる最高の一品を、今すぐ手に入れ、輝かしい明日を迎えましょう！
+    <!-- 商品2 -->
+    <div class="card">
+        <h2>【ポイント20倍】Apple iPad Air 11インチ M2チップ搭載モデル</h2>
+        <p class="benefit">溢れるアイデアを、魔法のような操作感ですべてカタチにする。</p>
+        <p class="reason">
+            楽天ポイント還元率が過去最高レベルに到達し、実質価格では中古相場を大きく下回る驚異的なコスパです。<br>
+            次世代チップ搭載モデルをこの条件で入手できる機会は、今期これを逃すと他にありません。
         </p>
-    </section>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+        </div>
+    </div>
 
-    <footer>
-        &copy; 2026 Value Information. All Rights Reserved.
-    </footer>
+    <!-- 商品3 -->
+    <div class="card">
+        <h2>【50%OFF】Anker 737 Power Bank (PowerCore 24K)</h2>
+        <p class="benefit">外出先でも電力の不安をゼロにし、完全なる自由なノマドワークを実現する。</p>
+        <p class="reason">
+            半額クーポンは数時間で予定枚数終了が見込まれるため、迷っている時間はありません。<br>
+            災害対策としても最強スペックを誇る超大容量モデルを、予備用を含め格安で確保する絶好の好機です。
+        </p>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+        </div>
+    </div>
+
 </div>
 
 </body>
